@@ -7,10 +7,6 @@ tags: ["new relic", "on-premises", "monitoring", "setup"]
 #To update these screenshots, you can log in with credentials detailed in How to Update Screenshots Using Team Apps.
 ---
 
-{{% alert color="info" %}}
-<img src="/attachments/china.png" class="d-inline-block" /> For the Simplified Chinese translation, click [中文译文](https://cdn.mendix.tencent-cloud.com/documentation/developerportal/setting-up-monitoring-with-new-relic.pdf).
-{{% /alert %}}
-
 ## 1 Introduction
 
 When setting up a Mendix application on premises, you can set up advanced monitoring with New Relic. This works with both Windows and Linux deployments. It is not supported in Mendix Cloud.
@@ -33,7 +29,7 @@ The configuration section in *m2ee.yaml* should look like this:
 
 ```yml
  javaopts: [
- "-Dfile.encoding=UTF-8", "-XX:MaxPermSize=64M", "-Xmx256M", "-Xms256M",
+ "-Dfile.encoding=UTF-8", "-Xmx256M", "-Xms256M",
  "-Djava.io.tmpdir=/path/to/project/data/tmp",
  "-javaagent:/home/mendix-user/newrelic/newrelic.jar",
  ]
